--- a/projectGuides/P1_1/.NET 5.0/P1_1.csproj
+++ b/projectGuides/P1_1/.NET 5.0/P1_1.csproj
@@ -3,6 +3,11 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <Platforms>AnyCPU;x64</Platforms>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <Optimize>false</Optimize>
   </PropertyGroup>
 
 </Project>
